2016-02-18  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Makefile.am, configure.ac: New convention.

2015-07-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2015-03-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import lua-5.2.4.
	* version.ac: Adjust.

2015-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use the fragment ../../am/dist_hook.am.

2014-10-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac: Build lua52 as (possibly shared)
	Libtool library, install headers, library, and .pc file.
	* luaerror.test: Adapted.

2014-06-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CPPFLAGS): Drop LUAI_HASHLIMIT.

2014-03-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Add -DHAVE_UNISTD_H to LUA52_DEFINES because
	config.h is not used.

2014-03-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CPPFLAGS): Define LUAI_HASHLIMIT=6 for LuaTeX.

2014-03-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luaerror.test (new): Shell script to test error handling.
	* error.exp (new): Expected test output.
	* Makefile.am: Add the new files.
	* configure.ac: The test program requires sqrt().

2014-02-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lua52.test (new): Shell script for a basic test.
	* luatest.c (new): Source code for test program.
	* Makefile.am: Add the new files.

2013-12-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import lua-5.2.3.
	* version.ac: Adjust.

2013-07-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use ../../am/rebuild.am.

2013-07-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* include/Makefile.am: Moved Makefile fragments to ../../am/.

2012-06-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import lua-5.2.2.
	* version.ac: Adjust.

2012-06-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import lua-5.2.1/ from http://www.lua.org/ftp/lua-5.2.1.tar.gz.
